tdf#73547 fix ooxml export / import custom dashes.

Fix import logic as well as arithmatic precion of both import
and export.

Change-Id: I97e9bde847e0a2425421af2f2175d4d0b7af0cab
Reviewed-on: https://gerrit.libreoffice.org/59306
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>